# Aviation-Dashboard-v0.0.0

aviation-backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
aviation-backend/app/: __init__.py  config.py  database.py
aviation-backend/app/models/: __init__.py  admin_orm.py  admin_schemas.py  audit_orm.py  audit_schemas.py  auth_orm.py  auth_schemas.py  comms_orm.py  comms_schemas.py  schemas.py  settings_orm.py  turnaround_orm.py  user_settings_schemas.py  weather_schemas.py
aviation-backend/app/routes/: admin.py  aircraft_types.py  alerts.py  audit.py  auth.py  comms.py  flights.py  fuel_analytics.py  health.py  metar.py  replay.py  settings.py  turnaround.py  users.py  weather.py
aviation-backend/app/services/: admin_dashboard.py  aircraft.py  aircraft_catalog.py  airports.py  alert_ws.py  alerts.py  audit.py  auth.py  aviation.py  comms.py  fuel_analytics.py  opensky.py  replay.py  turnaround.py  user_settings.py  weather.py  weather_config.py  websocket.py
aviation-backend/tests/: test_admin_auth.py  test_admin_controls.py  test_admin_dashboard.py  test_audit.py  test_auth.py  test_comms.py  test_user_settings.py  test_weather_windy.py
aviation-frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
aviation-frontend/src/: App.tsx  Dashboard.tsx  config.ts  index.css
aviation-frontend/src/auth/: api.ts  authFetch.ts  session.ts
aviation-frontend/src/components/: AdminConsolePage.tsx  AdminDashboard.tsx  AdminLoginPage.tsx  AircraftDetailsPage.tsx  AlertToast.tsx  (+20 more)
(+34 files in other folders)
