[project]
name = "aviation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "httpx>=0.27.0",
    "geopy>=2.4.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.10.1",
    "email-validator>=2.2.0",
    "pydantic>=2.12.5",
]
